# telegram_bot_framework

./: CMakeLists.txt  README.md
include/bot/: api.h  utils.h
include/bot/http/: async_http_client.h
include/bot/types/: Animation.h  Audio.h  BotCommand.h  CallbackGame.h  CallbackQuery.h  Chat.h  ChatMember.h  ChatPermissions.h  ChatPhoto.h  ChosenInlineResult.h  Contact.h  Dice.h  Document.h  File.h  ForceReply.h  Game.h  GameHighScore.h  GenericMedia.h  GenericReply.h  InlineKeyboardButton.h  InlineKeyboardMarkup.h  InputContactMessageContent.h  InputFile.h  InputLocationMessageContent.h  InputMediaAnimation.h  InputMediaAudio.h  InputMediaDocument.h  InputMediaPhoto.h  InputMediaVideo.h  InputTextMessageContent.h  InputVenueMessageContent.h  Invoice.h  KeyboardButton.h  KeyboardButtonPollType.h  LabeledPrice.h  Location.h  LoginUrl.h  MaskPosition.h  Message.h  MessageEntity.h  (+22 more)
src/: main.cpp
src/bot/: api.cpp  utils.cpp
src/bot/http/: async_http_client.cpp
src/bot/types/: types.cpp
